--- a/index.html
+++ b/index.html
@@ -122,31 +122,16 @@
         }
       };
 
-      // setting initial values for required parameters
-      let acceleration = 9.8;
-      let bounce_distance = 0.95;
-      let bottom_position_y = -0.4;
-      let time_step = 0.02;
-      // time_counter is calculated to be the time the ball just reached the top position
-      // this is simply calculated with the s = (1/2)gt*t formula, which is the case when ball is dropped from the top position
-      let time_counter = Math.sqrt((bounce_distance * 2) / acceleration);
-      let initial_speed = acceleration * time_counter;
-      let angle = 0;
-      ball.position.set(xDir, -0.5, 0);
+      let yDir = -0.5;
+      let up = true;
+      ball.position.set(xDir, yDir, 0);
 
       function render(time) {
-        // reset time_counter back to the start of the bouncing sequence when sphere hits through the bottom position
-        if (ball.position.y < bottom_position_y) {
-          time_counter = 0;
+        if (up) {
+          yDir += 0.01;
+        } else {
+          yDir -= 0.01;
         }
-        // calculate sphere position with the s2 = s1 + ut + (1/2)gt*t formula
-        // this formula assumes the ball to be bouncing off from the bottom position when time_counter is zero
-        ball.position.y =
-          bottom_position_y +
-          initial_speed * time_counter -
-          0.5 * acceleration * time_counter * time_counter;
-        // advance time
-        time_counter += time_step;
 
         for (
           var vertex = 0;
@@ -164,6 +149,16 @@
             direction_vec.clone().normalize()
           );
 
+          // does it hit the paddle?
+          var paddle_collision = ray.intersectObjects([paddle]);
+          if (
+            paddle_collision.length > 0 &&
+            paddle_collision[0].distance < direction_vec.length()
+          ) {
+            up = true;
+            break;
+          }
+
           // does it hit the bricks?
           var brick_collision = ray.intersectObjects(bricks);
           if (
@@ -171,23 +166,24 @@
             brick_collision[0].distance < direction_vec.length()
           ) {
             scene.remove(brick_collision[0].object);
-            acceleration *= -1;
+            for (
+              let brick_index = 0;
+              brick_index < bricks.length;
+              brick_index++
+            ) {
+              if (bricks[brick_index].uuid == brick_collision[0].object.uuid) {
+                bricks.splice(brick_index, 1);
+              }
+            }
+            up = false;
             break;
-          }
-
-          // does it hit the paddle?
-          var paddle_collision = ray.intersectObjects([paddle]);
-          if (
-            paddle_collision.length > 0 &&
-            paddle_collision[0].distance < direction_vec.length()
-          ) {
-            acceleration *= -1;
-            break;
+          } else if (yDir > 0.6) {
+            up = false;
           }
         }
 
         paddle.position.set(xDir, -0.5, 0);
-        ball.position.set(xDir, ball.position.y, 0);
+        ball.position.set(xDir, yDir, 0);
         scene.add(paddle);
         scene.add(ball);
         renderer.render(scene, camera);
