--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       ];
 
       for (let z = 0; z >= -0.2; z = z - 0.2) {
-        for (let j = 0.5; j > 0.3; j = j - 0.05) {
+        for (let j = 0.5; j > 0.36; j = j - 0.05) {
           for (let i = -1; i < 0.8; i = i + 0.2) {
             const brick = new THREE.BoxGeometry(0.15, 0.03, 0.05);
             const material = new THREE.MeshPhongMaterial({
@@ -190,6 +190,8 @@
     }
 
     function main() {
+      background_music();
+
       const [renderer, camera] = renderCamera();
       const scene = new THREE.Scene();
       renderLight(scene);
@@ -197,8 +199,6 @@
       let paddle = renderPaddle();
       let bricks = renderBricks(scene);
       renderBoundaries(scene);
-
-      background_music();
 
       var score_div = document.getElementById("score");
       score_div.innerHTML = "Score: 0";
@@ -213,6 +213,7 @@
       // game over text
       render_text(scene, "Breakout!", 0x566cf8, true);
       render_text(scene, "Game Over!", 0xa62a04, false);
+      render_text(scene, "You Won!", 0xffbe0b, false);
 
       let paddleX = 0;
       let paddleY = -0.5;
@@ -296,8 +297,7 @@
             paddle_collision.length > 0 &&
             paddle_collision[0].distance < direction_vec.length()
           ) {
-            let prob_z = Math.random();
-            if (prob_z >= 0.5) {
+            if (Math.random() >= 0.5) {
               ballDir.dz *= -1;
             }
             ballDir.dy *= -1;
@@ -337,13 +337,19 @@
           } else if (ballDir.x > 1 || ballDir.x < -1) {
             // Reached the sides
             ballDir.dx *= -1;
-          } else if (ballDir.y < paddleY - 0.02) {
+          } else if (ballDir.y < paddleY - 0.02 && over == false) {
             // game over
             over = true;
             scene.remove(text_rendered["Breakout!"]);
             scene.remove(ball);
             scene.remove(paddle);
             scene.add(text_rendered["Game Over!"]);
+          } else if (bricks.length == 0) {
+            over = true;
+            scene.remove(text_rendered["Breakout!"]);
+            scene.remove(ball);
+            scene.remove(paddle);
+            scene.add(text_rendered["You Won!"]);
           }
         }
 
